# SimCore

./: README.md  __init__.py  pyproject.toml
assets/mujoco/props/: box.xml  table.xml
assets/mujoco/robots/pan_tilt_dummy/: pan_tilt_dummy.xml
assets/mujoco/robots/pan_tilt_head/: pan_tilt_torque.xml
assets/mujoco/scenes/: test_head_scene.xml  world_scene.xml
examples/: basic_arm_control.py  panda_arm.yaml  scene_config.yaml
simcore/: __init__.py
simcore/common/: robot_kinematics.py  utils.py  video_logger.py
simcore/controller/: controller_manager.py  dynamic_impedance_controller.py  impedance.py  joint_position.py
simcore/core/: robot_system.py
simcore/simulation/: __init__.py  frame_distributor.py  sim_display.py  sim_model.py
simcore/streaming/: __init__.py  base_streamer.py  gstreamer_udp_streamer.py  streamer_manager.py
